# TasksManagement

./: CMakeLists.txt  log.txt  main.cpp  task.txt
include/: Logger.h  TaskManager.h  command.h
src/: Logger.cpp  TaskManager.cpp
